fix: [PIE-1163]: Execution Page - Alignment (#5315)
* fix: [PIE-1163]: Execution Page - Alignment

* fix: [PIE-1163]: Execution Page - Alignment - part2

* fix: [PIE-1163]: Execution Page - Alignment - part3

--- a/src/modules/70-pipeline/pages/execution/ExecutionLandingPage/ExecutionTabs/ExecutionTabs.module.scss
+++ b/src/modules/70-pipeline/pages/execution/ExecutionLandingPage/ExecutionTabs/ExecutionTabs.module.scss
@@ -3,7 +3,7 @@
 .main {
   display: flex;
   align-items: center;
-  padding: var(--spacing-none) var(--spacing-medium) var(--spacing-none) var(--spacing-xxlarge);
+  padding: var(--spacing-none) var(--spacing-medium) var(--spacing-none) var(--spacing-xlarge);
   height: var(--execution-tabs-height);
   border-bottom: 1px solid var(--grey-200);
   flex: 0 0 auto;
