--- a/src/modules/70-pipeline/pages/execution/ExecutionPipelineView/ExecutionGraphView/ExecutionGraph/ExecutionGraph.module.scss
+++ b/src/modules/70-pipeline/pages/execution/ExecutionPipelineView/ExecutionGraphView/ExecutionGraph/ExecutionGraph.module.scss
@@ -5,5 +5,5 @@
 }
 
 .executionError {
-  padding: var(--spacing-small) var(--spacing-xxlarge) !important;
+  padding: var(--spacing-small) var(--spacing-xlarge) !important;
 }
